[package]
name = "displays"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "displays"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
display-info = "0.1.1"
deno_bindgen = "0.5.1"
serde = { version = "1", features = ["derive"] }